Add user alias and name to sign in response for front-end's consumption
